--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 <body>
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
 <nav>
+  <div class="navBar">
   <a href="services.html">Services</a>
   <a href="#product">Product</a>
   <a href="#vision">Vision</a>
   <a href="#features">Features</a>
   <a href="about.html">About</a>
   <a href="#contact">Contact</a>
+  </div>
   <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
 </nav>
 <section class="main">
