--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
   <a href="about.html">About</a>
   <a href="#contact">Contact</a>
   </div>
+  <div class="headimg">
   <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
+</div>
 </nav>
 <section class="main">
   <header class="first-section">
@@ -33,8 +35,9 @@
       </h1>
       <a href="#" class="button">Get Started</a>
     </div>
-
+    <div class="mainimg">
     <img src="img/header-img.png" alt="Image of a code snippet." />
+     </div>
   </header>
 
   <hr />
