--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <a href="#vision">Vision</a>
   <a href="#features">Features</a>
   <a href="about.html">About</a>
-  <a href="#contact">Contact</a>
+  <a href="#contact">Contact</a> 
   </div>
   <div class="headimg">
   <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
@@ -46,7 +46,7 @@
     <div>
       <h1 class="sub-title" id="features">Features</h1>
       <p>
-        Aelementum magna eros, ac posuere elvit tempus et. Suspendisse vel
+        Aelementum magna ero, ac posuere elvit tempus et. Suspendisse vel
         tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
         convallis augue justo, at imperdiet metus scelerisque quis.
       </p>
